tests/baselines/reference/functionTypeArgumentArrayAssignment.errors.txt
tests/cases/compiler/functionTypeArgumentArrayAssignment.ts(3,2): error TS2300: Duplicate identifier 'length'.


==== tests/cases/compiler/functionTypeArgumentArrayAssignment.ts (1 errors) ====
    interface Array<T> {
    	foo: T;
    	length: number;
    	~~~~~~
!!! error TS2300: Duplicate identifier 'length'.
    }
    
    function map<U>() {
    var ys: U[] = [];
    }
    